# zk_integration

./: pyproject.toml  requirements.txt
Review/: zk_device_OLD.py
zk_integration/: hooks.py
zk_integration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
zk_integration/public/css/: zk_integration.css
zk_integration/zk/doctype/device_log/: device_log.js  device_log.py  device_log_list.js
zk_integration/zk/doctype/print/: print.py
zk_integration/zk/doctype/zk_device/: zk_device.js  zk_device.py  zk_device_list.js
