[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zk_integration"
authors = [
    {name = "Peter", email = "eng.peter.maged@gmail.com"}
]
description = "Zk Device Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "frappe>=15.0.0",
    "pyzk>=0.2",
]

[tool.flit.module]
name = "zk_integration"
